Add layout full HTML

--- a/src/Project/Agency/code/App_Config/Include/Project/Agency.Website.Serialization.config
+++ b/src/Project/Agency/code/App_Config/Include/Project/Agency.Website.Serialization.config
@@ -4,6 +4,8 @@
             <configurations>
                 <configuration name="Project.Agency.Website" description="Agency content" dependencies="Foundation.*,Feature.*,Project.Common" extends="Helix.Project">
                     <predicate>
+                        <include name="Layouts" database="master" path="/sitecore/layout/Layouts/Project/Agency" />
+                        <include name="Content" database="master" path="/sitecore/content/Agency" />
                     </predicate>
                 </configuration>
             </configurations>
