--- a/src/Feature/Navigation/code/App_Config/Include/Feature/Feature.Navigation.Serialization.config
+++ b/src/Feature/Navigation/code/App_Config/Include/Feature/Feature.Navigation.Serialization.config
@@ -2,7 +2,7 @@
     <sitecore>
         <unicorn>
             <configurations>
-                <configuration name="Agency.Feature.Navigation" description="Feature Navigation" dependencies="Foundation.Serialization" extends="Helix.Feature" >
+                <configuration name="Feature.Navigation" description="Feature Navigation" dependencies="Foundation.Serialization" extends="Helix.Feature" >
                 </configuration>
             </configurations>
         </unicorn>
