--- a/src/Feature/Navigation/serialization/Templates/Navigation.yml
+++ b/src/Feature/Navigation/serialization/Templates/Navigation.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "ce256a2c-fb6f-4846-ae3c-688a8fa8943d"
-Parent: "5b6f8720-3a93-4da1-92a0-c3e85e01219a"
-Template: "5b6f8720-3a93-4da1-92a0-c3e85e01219a"
-Path: /sitecore/templates/Foundation/Assets/_HasTheme/__Standard Values
+ID: "091b9eb7-2011-4c03-b66d-9ed3ba982d0a"
+Parent: "8f343079-3cc5-4ef7-bc27-32addb46f45e"
+Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c"
+Path: /sitecore/templates/Feature/Navigation
 DB: master
 Languages:
 - Language: en
@@ -11,7 +11,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161212T014151Z
+      Value: 20180130T154620Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: |
