--- a/src/Feature/Navigation/serialization/Media/Navigation.yml
+++ b/src/Feature/Navigation/serialization/Media/Navigation.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "adcf25dc-5993-4c20-8204-83de5a35cbcb"
-Parent: "b26bd035-8d0a-4df3-8f67-2de3c7fdd74a"
-Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c"
-Path: /sitecore/templates/Foundation/FieldEditor
+ID: "35378403-b1ff-4066-be51-5c9462f4f089"
+Parent: "4e5e3bfb-c253-4764-9f60-309172f9f592"
+Template: "fe5dd826-48c6-436d-b87a-7c4210c7413b"
+Path: /sitecore/media library/Feature/Navigation
 DB: master
 Languages:
 - Language: en
@@ -11,7 +11,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20170804T141141Z
+      Value: 20180130T154651Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: |
