Add Media Feature

--- a/src/Foundation/Orm/code/Agency.Foundation.Orm.csproj
+++ b/src/Foundation/Orm/code/Agency.Foundation.Orm.csproj
@@ -123,7 +123,7 @@
   <ItemGroup>
     <Compile Include="App_Start\GlassMapperSc.cs" />
     <Compile Include="App_Start\GlassMapperScCustom.cs" />
-    <Compile Include="Models\ISitecoreItem.cs" />
+    <Compile Include="Models\SitecoreItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup>
