--- a/src/Project/Agency/code/Sitecore.Agency.Website.csproj
+++ b/src/Project/Agency/code/Sitecore.Agency.Website.csproj
@@ -149,7 +149,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\css\agency.css" />
     <Content Include="assets\css\bootstrap.css" />
+    <Content Include="assets\js\agency.js" />
+    <Content Include="assets\js\agency.min.js" />
+    <Content Include="assets\js\bootstrap.bundle.js" />
+    <Content Include="assets\js\bootstrap.bundle.min.js" />
+    <Content Include="assets\js\contact_me.js" />
+    <Content Include="assets\js\jqBootstrapValidation.js" />
+    <Content Include="assets\js\jquery.easing.min.js" />
+    <Content Include="assets\js\jquery.js" />
+    <Content Include="assets\js\jquery.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="App_Config\Include\Project\z.Agency.DevSettings.config" />
     <Content Include="App_Config\Include\Project\Agency.Website.config" />
@@ -169,7 +179,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="assets\js\" />
     <Folder Include="Views\Website\Sublayouts\" />
   </ItemGroup>
   <ItemGroup>
