--- a/src/Feature/Navigation/serialization/Templates/Navigation/Main Menu.yml
+++ b/src/Feature/Navigation/serialization/Templates/Navigation/Main Menu.yml
@@ -8,13 +8,17 @@ SharedFields:
 - ID: "06d5295c-ed2f-4a54-9bf2-26228d113318"
   Hint: __Icon
   Value: Control/32x32/popup_menu_b.png
+- ID: "1172f251-dad4-4efb-a329-0c63500e4f1e"
+  Hint: __Masters
+  Type: TreelistEx
+  Value: "{E269FBB5-3750-427A-9149-7AA950B49301}"
 - ID: "12c33f3f-86c5-43a5-aeb4-5598cec45116"
   Hint: __Base template
   Type: tree list
   Value: "{1930BBEB-7805-471A-A3BE-4858AC7CF696}"
 - ID: "f7d48a55-2158-4f02-9356-756654404f73"
   Hint: __Standard values
-  Value: "{3FF6E2FA-BEE6-436E-9F60-9384D53990EB}"
+  Value: "{6E737E63-DA0C-49CD-9E78-0E0F21999183}"
 Languages:
 - Language: en
   Versions:
