--- a/src/Project/Agency/serialization/Content/Agency/Data.yml
+++ b/src/Project/Agency/serialization/Content/Agency/Data.yml
@@ -4,6 +4,16 @@ Parent: "da5edcb8-7d8b-4fa5-9ce5-868a185c9f69"
 Template: "a87a00b1-e6db-45ab-8b54-636fec3b5523"
 Path: /sitecore/content/Agency/Data
 DB: master
+SharedFields:
+- ID: "06d5295c-ed2f-4a54-9bf2-26228d113318"
+  Hint: __Icon
+  Value: Applications/32x32/folder_green.png
+- ID: "1172f251-dad4-4efb-a329-0c63500e4f1e"
+  Hint: __Masters
+  Type: TreelistEx
+  Value: |
+    {A87A00B1-E6DB-45AB-8B54-636FEC3B5523}
+    {72E00846-9862-4CC5-89D6-C0349F2E92C9}
 Languages:
 - Language: en
   Versions:
