--- a/src/Project/Agency/serialization/Templates/Agency/Home/__Standard Values.yml
+++ b/src/Project/Agency/serialization/Templates/Agency/Home/__Standard Values.yml
@@ -12,7 +12,12 @@ SharedFields:
     <r xmlns:xsd="http://www.w3.org/2001/XMLSchema">
       <d
         id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}"
-        l="{681C8707-BA53-40A0-B97E-4B732FD519F6}" />
+        l="{681C8707-BA53-40A0-B97E-4B732FD519F6}">
+        <r
+          id="{6F3549DA-889F-4375-B322-5E6B6A875987}"
+          ph="navigation"
+          uid="{C1D61F6B-83CE-40B2-97BB-6916984131C1}" />
+      </d>
     </r>
 Languages:
 - Language: en
