Add custom experience buttons paths to Serialization

--- a/src/Project/Agency/code/App_Config/Include/Project/Agency.Website.config
+++ b/src/Project/Agency/code/App_Config/Include/Project/Agency.Website.config
@@ -67,7 +67,7 @@
         </cacheSizes>
         <settings>
             <setting name="Preview.DefaultSite">
-                <patch:attribute name="value" value="habitat" />
+                <patch:attribute name="value" value="agency" />
             </setting>
         </settings>
     </sitecore>
