--- a/src/Feature/Media/code/packages.config
+++ b/src/Feature/Media/code/packages.config
@@ -9,4 +9,5 @@
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Sitecore.Kernel.NoReferences" version="8.2.170614" targetFramework="net461" developmentDependency="true" />
+  <package id="Sitecore.Mvc.NoReferences" version="8.2.170614" targetFramework="net462" developmentDependency="true" />
 </packages>
