--- a/src/Foundation/Serialization/code/App_Config/Include/Foundation/Foundation.Serialization.config
+++ b/src/Foundation/Serialization/code/App_Config/Include/Foundation/Foundation.Serialization.config
@@ -122,6 +122,19 @@
                         <include name="Core.Templates.Project" database="core" path="/sitecore/templates/Project">
                             <exclude children="true" />
                         </include>
+                        
+                        <!-- Core Custom Buttons -->
+                        <include name="Core.CustomExperienceButtons.Feature" database="core" path="/sitecore/content/Applications/WebEdit/Custom Experience Buttons/Feature">
+                            <exclude children="true"></exclude>
+                        </include>
+
+                        <include name="Core.CustomExperienceButtons.Foundation" database="core" path="/sitecore/content/Applications/WebEdit/Custom Experience Buttons/Foundation">
+                            <exclude children="true"></exclude>
+                        </include>
+
+                        <include name="Core.CustomExperienceButtons.Project" database="core" path="/sitecore/content/Applications/WebEdit/Custom Experience Buttons/Project">
+                            <exclude children="true"></exclude>
+                        </include>
                     </predicate>
                 </configuration>
             </configurations>
