--- a/src/Feature/Media/code/App_Config/Include/Feature/Feature.Media.Serialization.config
+++ b/src/Feature/Media/code/App_Config/Include/Feature/Feature.Media.Serialization.config
@@ -3,6 +3,11 @@
         <unicorn>
             <configurations>
                 <configuration name="Feature.Media" description="Feature Media" dependencies="Foundation.Serialization" extends="Helix.Feature" >
+                    <predicate>
+                        <!-- Core Custom Buttons -->
+                        <include name="Core.CustomExperienceButtons.Feature.Media" database="core" path="/sitecore/content/Applications/WebEdit/Custom Experience Buttons/Feature/Media">
+                        </include>
+                    </predicate>
                 </configuration>
             </configurations>
         </unicorn>
