Add Page Header EE button

--- a/src/Project/Agency/code/App_Config/Include/Project/Agency.Website.Serialization.config
+++ b/src/Project/Agency/code/App_Config/Include/Project/Agency.Website.Serialization.config
@@ -6,6 +6,7 @@
                     <predicate>
                         <include name="Layouts" database="master" path="/sitecore/layout/Layouts/Project/Agency" />
                         <include name="Content" database="master" path="/sitecore/content/Agency" />
+                        <include name="Media" database="master" path="/sitecore/media library/Project/Agency" />
                     </predicate>
                 </configuration>
             </configurations>
