--- a/src/Feature/Media/serialization/Renderings/Media/Page Header.yml
+++ b/src/Feature/Media/serialization/Renderings/Media/Page Header.yml
@@ -11,6 +11,10 @@ SharedFields:
 - ID: "1a7c85e5-dc0b-490d-9187-bb1dbcb4c72f"
   Hint: Datasource Template
   Value: /sitecore/templates/Feature/Media/Page Header
+- ID: "a2f5d9df-8cba-4a1d-99eb-51acb94cb057"
+  Hint: Page Editor Buttons
+  Type: Treelist
+  Value: "{6ACFA1B4-1282-4A7D-B410-B867819879CE}"
 - ID: "b5b27af1-25ef-405c-87ce-369b3a004016"
   Hint: Datasource Location
   Value: ./Page Data
