--- a/src/Feature/Navigation/serialization/Templates/Navigation/Main Menu/__Standard Values.yml
+++ b/src/Feature/Navigation/serialization/Templates/Navigation/Main Menu/__Standard Values.yml
@@ -8,7 +8,9 @@ SharedFields:
 - ID: "1172f251-dad4-4efb-a329-0c63500e4f1e"
   Hint: __Masters
   Type: TreelistEx
-  Value: "{65B859AF-1CE7-44BA-91AC-31F6F34641E4}"
+  Value: |
+    {65B859AF-1CE7-44BA-91AC-31F6F34641E4}
+    {D41FA022-67EF-48F9-AA9C-F1954222E466}
 Languages:
 - Language: en
   Versions:
